# aws-lakehouse

./: .dockerignore  .gitignore  README.md  pyproject.toml
config/: recovery_sample_months.txt
dbt/: dbt_project.yml
docs/: aws_athena_glue_setup.md  gold_layer_model.md  gold_star_schema.md  silver_layer_rules.md
jobs/: download.py  glue_silver_yellow_taxi.py  local_explore.py  raw_quality_check.py
nyctx-airflow-orchestrator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nyctx-airflow-orchestrator/dags/: pipeline.py
nyctx-athena-catalog/: README.md
nyctx-athena-catalog/ddl/: 02_create_bronze_yellow_taxi_table.sql  create_database.sql  create_silver_yellow_taxi.sql
nyctx-athena-catalog/docs/: query_cost_guardrails.md
nyctx-athena-catalog/profiling/: 08_profile_bronze_yellow_taxi.sql
nyctx-athena-catalog/queries/: 00_smoke_test.sql  01_monthly_trip_summary.sql  02_payment_type_summary.sql  03_hourly_demand_pattern.sql  04_top_pickup_zones.sql
nyctx-athena-catalog/scripts/: run_athena_sql.sh  validate_silver_partitions.sh
nyctx-bi-dashboard/: README.md
nyctx-dbt-transformer/: README.md  dbt_project.yml  profiles.yml  pyproject.toml  selectors.yml
nyctx-glue-processor/: README.md
nyctx-infra/: README.md
nyctx-ingestion/: README.md  pyproject.toml
nyctx-ingestion/scripts/: download.py  raw_quality_check.py  upload_to_s3.sh
nyctx-ingestion/src/nyctx_ingestion/: paths.py  quality.py
nyctx-terraform-infra/: README.md
scripts/: deploy_glue_job.sh  run_glue_job.sh
src/: logger.py  paths.py  quality.py
(+64 files in other folders)
