[project]
name = "nyc-taxi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-athena>=1.10.1",
    "dbt-core>=1.11.11",
    "duckdb>=1.5.2",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "tabulate>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nyctx-ingestion/src/nyctx_ingestion"]
