[project]
name = "nyc-taxi-pipeline"
version = "0.1.0"
description = "AWS Lakehouse project for NYC Taxi analytics"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "nyctx-ingestion",
    "nyctx-airflow-orchestrator",
    "nyctx-dbt-transformer",
]
