[project]
name = "nyctx-ingestion"
version = "0.1.0"
description = "Ingestion and local raw quality checks for NYC Taxi data"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "duckdb>=1.1,<2",
    "pandas>=2.1,<3",
    "pyarrow>=15,<25",
    "requests>=2.31,<3",
    "tabulate>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyctx_ingestion"]
